--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,19 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright 2017 Phil Shadlyn
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
+
 
 <resources>
 
@@ -52,8 +38,6 @@
     <string name="prefs_title_decimal_separator">Separador decimal</string>
     <string name="prefs_title_visual">Visual</string>
     <string name="prefs_title_light_theme">Usar el Tema claro</string>
-    <string name="prefs_title_language">Idioma</string>
-    <string name="prefs_summary_language">Elija el idioma que se utilizará en toda la aplicación</string>
     <string name="prefs_title_other">Otras cosas</string>
     <string name="prefs_title_source_code">Ver código fuente</string>
     <string name="pref_summary_source_code">¡Unit Converter Ultimate es de código abierto!  Echa un vistazo al código en GitHub.</string>
@@ -203,9 +187,9 @@
     <string name="week">Semana</string>
     <string name="day">Día</string>
     <string name="hour">Hora</string>
-    <string name="minute">Minuto</string>
-    <string name="second">Segundo</string>
-    <string name="millisecond">Milisegundo</string>
+    <string name="minute">Minuta</string>
+    <string name="second">Segunda</string>
+    <string name="millisecond">Millisegundo</string>
     <string name="nanosecond">Nanosegundo</string>
 
     <!-- Torque -->
