--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -1,19 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright 2017 Phil Shadlyn
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
+
 
 <resources>
 
@@ -27,7 +13,7 @@
     <string name="menu_help">Pomoć</string>
     <string name="menu_settings">Postavke</string>
     <string name="menu_download">Preuzimanje</string>
-    <string name="group_separator_none">Nijedno</string>
+    <string name="group_separator_none">Nijedan</string>
     <string name="request_unit">Unit Converter Ultimate: Zahtjev nove jedinice</string>
     <string name="header_other_stuff">Ostale stvari</string>
     <string name="progress_loading">Učitavanje&#8230;</string>
@@ -52,8 +38,6 @@
     <string name="prefs_title_decimal_separator">Separator decimala</string>
     <string name="prefs_title_visual">Izgled</string>
     <string name="prefs_title_light_theme">Koristi svijetlu temu</string>
-    <string name="prefs_title_language">Jezik</string>
-    <string name="prefs_summary_language">Odaberite jezik koji želite koristiti kroz aplikaciju</string>
     <string name="prefs_title_other">Ostale stvari</string>
     <string name="prefs_title_source_code">Pregledaj izvorni kod</string>
     <string name="pref_summary_source_code">Unit Converter Ultimate je otvorenog koda! Pregledajte kod na GitHubu.</string>
