--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright 2017 Phil Shadlyn
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~    http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
+
 
 <resources>
 
-    <string name="app_name">Unit Converter Ultimate</string>
-    <string name="title_activity_donate">Donate?</string>
+    <string name="app_name">Converter</string>
+    <string name="title_activity_donate">Donate</string>
     <string name="title_activity_settings">Settings</string>
     <string name="text_from">From</string>
     <string name="text_to">To</string>
@@ -28,17 +14,17 @@
     <string name="menu_help">Help</string>
     <string name="menu_settings">Settings</string>
     <string name="group_separator_none">None</string>
-    <string name="request_unit">Unit Converter Ultimate: New Unit Request</string>
+    <string name="request_unit"></string>
     <string name="header_other_stuff">Other Stuff</string>
     <string name="progress_loading">Loading&#8230;</string>
     <string name="error_loading_currency">There was an error updating the currency conversions.\n\nPlease check your Internet connection and try again.</string>
 
-    <string name="toast_error_billing_internet">Oops, there was a problem. Please make sure you have a working Internet connection and try again.</string>
-    <string name="toast_error_billing_general">Oops, there was a problem. Please try again.</string>
-    <string name="toast_donation_successful">Thank you for donating!</string>
+    <string name="toast_error_billing_internet">There was a problem. Please make sure you have a working Internet connection and try again.</string>
+    <string name="toast_error_billing_general"></string>
+    <string name="toast_donation_successful"></string>
     <string name="toast_error_no_browser">No browser could be found</string>
-    <string name="toast_error_no_email_app">No e-mail app installed</string>
-    <string name="toast_error_google_play">Error opening Google Play Store, please try again</string>
+    <string name="toast_error_no_email_app"></string>
+    <string name="toast_error_google_play"></string>
     <string name="toast_copied_clipboard">Text copied to clipboard</string>
     <string name="toast_currency_updated">Currency conversions updated</string>
     <string name="toast_error_updating_currency">There was an error updating the currency conversions.</string>
@@ -52,39 +38,22 @@
     <string name="prefs_title_decimal_separator">Decimal Separator</string>
     <string name="prefs_title_visual">Visual</string>
     <string name="prefs_title_light_theme">Use Light Theme</string>
-    <string name="prefs_title_language">Language</string>
-    <string name="prefs_summary_language">Choose the language to be used throughout the app</string>
-    <string name="prefs_title_other">Other Stuff</string>
-    <string name="prefs_title_source_code">View Source Code</string>
-    <string name="pref_summary_source_code">Unit Converter Ultimate is open source!  Check out the code on GitHub.</string>
-    <string name="prefs_title_unit_request">Request A Unit</string>
-    <string name="prefs_summary_unit_request">Would you like me to add a unit? Send me an email and let me know.</string>
-    <string name="prefs_title_rate">Rate on Google Play</string>
-    <string name="prefs_summary_rate">Enjoying all this unit conversion? Why not rate it 5 stars?</string>
-    <string name="prefs_title_donate">Donate</string>
-    <string name="prefs_summary_donate">Support development and make me smile :)</string>
-    <string name="prefs_title_open_issue">Found a Bug?</string>
-    <string name="prefs_summary_open_issue">Open an issue on GitHub.</string>
+    <string name="prefs_title_other">Made By:</string>
+    <string name="prefs_title_source_code">Sylhet Engineering College</string>
+    <string name="pref_summary_source_code"></string>
+    <string name="prefs_title_unit_request">Joydeep Ghose</string>
+    <string name="prefs_summary_unit_request"></string>
+    <string name="prefs_title_rate">MD. Yasin Rahman</string>
+    <string name="prefs_summary_rate"></string>
+    <string name="prefs_title_donate"></string>
+    <string name="prefs_summary_donate"></string>
+    <string name="prefs_title_open_issue">Zarif Chowdhury</string>
+    <string name="prefs_summary_open_issue"></string>
 
     <string name="dialog_btn_got_it">Got It</string>
     <string name="dialog_title_help">Help</string>
     <string name="dialog_message_help">Use the slide-in menu for navigation between conversions and select the units you require.\n\nThe converted value is fully customizable. Use the settings menu to select the number of decimal places required as well as the grouping and decimal separators.\n\nLong-pressing on the converted value copies it to the clipboard.</string>
-    <string name="dialog_btn_view_source">View Source</string>
-
-    <!-- Language values -->
-    <string name="language_default" translatable="false">System Default</string>
-    <string name="language_english" translatable="false">English</string>
-    <string name="language_croatian" translatable="false">Croatian</string>
-    <string name="language_farsi" translatable="false">Farsi</string>
-    <string name="language_french" translatable="false">French</string>
-    <string name="language_german" translatable="false">German</string>
-    <string name="language_hungarian" translatable="false">Hungarian</string>
-    <string name="language_italian" translatable="false">Italian</string>
-    <string name="language_japanese" translatable="false">Japanese</string>
-    <string name="language_portuguese_brazil" translatable="false">Portuguese (Brazil)</string>
-    <string name="language_russian" translatable="false">Russian</string>
-    <string name="language_spanish" translatable="false">Spanish</string>
-    <string name="language_turkish" translatable="false">Turkish</string>
+    <string name="dialog_btn_view_source"></string>
 
     <!-- Conversions -->
     <string name="area">Area</string>
@@ -104,14 +73,14 @@
     <string name="volume">Volume</string>
 
     <!-- Area -->
-    <string name="sq_kilometre">Sq Kilometre</string>
-    <string name="sq_metre">Sq Metre</string>
-    <string name="sq_centimetre">Sq Centimetre</string>
+    <string name="sq_kilometre">Sq-Kilometre</string>
+    <string name="sq_metre">Sq-Metre</string>
+    <string name="sq_centimetre">Sq-Centimetre</string>
     <string name="hectare">Hectare</string>
-    <string name="sq_mile">Sq Mile</string>
-    <string name="sq_yard">Sq Yard</string>
-    <string name="sq_foot">Sq Foot</string>
-    <string name="sq_inch">Sq Inch</string>
+    <string name="sq_mile">Sq-Mile</string>
+    <string name="sq_yard">Sq-Yard</string>
+    <string name="sq_foot">Sq-Foot</string>
+    <string name="sq_inch">Sq-Inch</string>
     <string name="acre">Acre</string>
 
     <!-- Digital Storage -->
@@ -148,8 +117,8 @@
     <string name="kilometre">Kilometre</string>
     <string name="mile">Miles</string>
     <string name="metre">Metre</string>
-    <string name="centimetre">Centimetre (cm)</string>
-    <string name="millimetre">Millimetre (mm)</string>
+    <string name="centimetre">Centimetre(cm)</string>
+    <string name="millimetre">Millimetre(mm)</string>
     <string name="micrometre">Micrometre</string>
     <string name="nanometre">Nanometre</string>
     <string name="yard">Yard</string>
@@ -167,16 +136,16 @@
     <string name="ounce">Ounce</string>
     <string name="grain">Grain</string>
     <string name="stone">Stone</string>
-    <string name="metric_ton">Ton (metric)</string>
-    <string name="short_ton">Ton (US/short)</string>
-    <string name="long_ton">Ton (UK/long)</string>
+    <string name="metric_ton">Ton(metric)</string>
+    <string name="short_ton">Ton(US/short)</string>
+    <string name="long_ton">Ton(UK/long)</string>
 
     <!-- Power -->
     <string name="watt">Watt</string>
     <string name="kilowatt">Kilowatt</string>
     <string name="megawatt">Megawatt</string>
-    <string name="hp">HP (metric)</string>
-    <string name="hp_uk">HP (mechanical)</string>
+    <string name="hp">HP(metric)</string>
+    <string name="hp_uk">HP(mechanical)</string>
     <string name="ft_lbf_s">ft-lbf/second</string>
     <string name="calorie_s">Calorie/second</string>
     <string name="btu_s">BTU/second</string>
@@ -231,15 +200,15 @@
     <string name="tablespoon">Tablespoon</string>
     <string name="cup">Cup</string>
     <string name="fluid_ounce">Fluid Ounce (US)</string>
-    <string name="quart">Quart (US)</string>
-    <string name="pint">Pint (US)</string>
-    <string name="gallon">Gallon (US)</string>
-    <string name="barrel">Barrel (US)</string>
-    <string name="fluid_ounce_uk">Fluid Ounce (UK)</string>
-    <string name="quart_uk">Quart (UK)</string>
-    <string name="pint_uk">Pint (UK)</string>
-    <string name="gallon_uk">Gallon (UK)</string>
-    <string name="barrel_uk">Barrel (UK)</string>
+    <string name="quart">Quart(US)</string>
+    <string name="pint">Pint(US)</string>
+    <string name="gallon">Gallon(US)</string>
+    <string name="barrel">Barrel(US)</string>
+    <string name="fluid_ounce_uk">Fluid Ounce(UK)</string>
+    <string name="quart_uk">Quart(UK)</string>
+    <string name="pint_uk">Pint(UK)</string>
+    <string name="gallon_uk">Gallon(UK)</string>
+    <string name="barrel_uk">Barrel(UK)</string>
     <string name="millilitre">Millilitre</string>
     <string name="litre">Litre</string>
     <string name="cubic_cm">Cubic cm</string>
@@ -281,5 +250,6 @@
     <string name="lira">Turkish Lira</string>
     <string name="usd">American Dollar</string>
     <string name="zar">South African Rand</string>
+    <string name="bdt">Bangladeshi Taka</string>
 
 </resources>
